// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. multiple ad slots 1`] = `
<style>
.IS1 {
  height: auto;
  overflow: hidden;
  width: 970;
}

.IS2 {
  align-items: center;
  flex: 1;
}

.IS3 {
  align-items: center;
  flex: 1;
}

.IS4 {
  align-items: center;
  flex: 1;
}

.IS5 {
  height: auto;
  overflow: hidden;
  width: 1;
}

.IS6 {
  align-items: center;
  flex: 1;
}

.IS7 {
  align-items: center;
  flex: 1;
}

.IS8 {
  align-items: center;
  flex: 1;
}

.IS9 {
  height: auto;
  overflow: hidden;
  width: 970;
}

.IS10 {
  align-items: center;
  flex: 1;
}

.IS11 {
  align-items: center;
  flex: 1;
}

.IS12 {
  align-items: center;
  flex: 1;
}
</style>

<AdComposer>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="header"
  >
    <MockServerClientRender
      server={null}
    >
      <tc-view__TcView
        className="IS4"
      >
        <StyledComponent
          className="IS3"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "tc-view__TcView-nuazoi-0",
                "isStatic": true,
                "lastClassName": "fPjBcr",
                "rules": Array [
                  "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                ],
              },
              "displayName": "tc-view__TcView",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "tc-view__TcView-nuazoi-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
          >
            <DOMContext
              baseUrl="https://www.thetimes.co.uk/"
              height={250}
              width={970}
            >
              <div
                className="IS1"
              />
            </DOMContext>
          </div>
        </StyledComponent>
      </tc-view__TcView>
    </MockServerClientRender>
  </Ad>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="pixel"
  >
    <MockServerClientRender
      server={null}
    >
      <tc-view__TcView
        className="IS8"
      >
        <StyledComponent
          className="IS7"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "tc-view__TcView-nuazoi-0",
                "isStatic": true,
                "lastClassName": "fPjBcr",
                "rules": Array [
                  "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                ],
              },
              "displayName": "tc-view__TcView",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "tc-view__TcView-nuazoi-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
          >
            <DOMContext
              baseUrl="https://www.thetimes.co.uk/"
              height={1}
              width={1}
            >
              <div
                className="IS5"
              />
            </DOMContext>
          </div>
        </StyledComponent>
      </tc-view__TcView>
    </MockServerClientRender>
  </Ad>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="intervention"
  >
    <MockServerClientRender
      server={null}
    >
      <tc-view__TcView
        className="IS12"
      >
        <StyledComponent
          className="IS11"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "tc-view__TcView-nuazoi-0",
                "isStatic": true,
                "lastClassName": "fPjBcr",
                "rules": Array [
                  "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                ],
              },
              "displayName": "tc-view__TcView",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "tc-view__TcView-nuazoi-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="tc-view__TcView-nuazoi-0 fPjBcr IS10"
          >
            <DOMContext
              baseUrl="https://www.thetimes.co.uk/"
              height={250}
              width={970}
            >
              <div
                className="IS9"
              />
            </DOMContext>
          </div>
        </StyledComponent>
      </tc-view__TcView>
    </MockServerClientRender>
  </Ad>
</AdComposer>
`;

exports[`2. placeholder when isloading 1`] = `
<style>
.IS1 {
  align-items: center;
  flex: 1;
}

.IS2 {
  align-items: center;
  flex: 1;
}

.IS3 {
  align-items: center;
  flex: 1;
}
</style>

<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={true}
  section="news"
  slotName="header"
>
  <MockServerClientRender
    server={null}
  >
    <tc-view__TcView
      className="IS3"
    >
      <StyledComponent
        className="IS2"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "tc-view__TcView-nuazoi-0",
              "isStatic": true,
              "lastClassName": "fPjBcr",
              "rules": Array [
                "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
              ],
            },
            "displayName": "tc-view__TcView",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "tc-view__TcView-nuazoi-0",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
        />
      </StyledComponent>
    </tc-view__TcView>
  </MockServerClientRender>
</Ad>
`;

exports[`3. nothing if there is an error in the loading of scripts 1`] = `
<style>
.IS1 {
  height: auto;
  overflow: hidden;
  width: 0;
}

.IS2 {
  align-items: center;
  flex: 1;
}

.IS3 {
  align-items: center;
  flex: 1;
}

.IS4 {
  align-items: center;
  flex: 1;
}
</style>

<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={false}
  section="news"
  slotName="header"
>
  <MockServerClientRender
    server={null}
  >
    <tc-view__TcView
      className="IS4"
    >
      <StyledComponent
        className="IS3"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "tc-view__TcView-nuazoi-0",
              "isStatic": true,
              "lastClassName": "fPjBcr",
              "rules": Array [
                "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
              ],
            },
            "displayName": "tc-view__TcView",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "tc-view__TcView-nuazoi-0",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <DOMContext
            baseUrl="https://www.thetimes.co.uk/"
            height={0}
            width={0}
          >
            <div
              className="IS1"
            />
          </DOMContext>
        </div>
      </StyledComponent>
    </tc-view__TcView>
  </MockServerClientRender>
</Ad>
`;

exports[`4. returns nothing if user has adblock 1`] = `
<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={false}
  section="news"
  slotName="header"
/>
`;
